modules/iteration8-pytorch-training/troubleshooting_report_20250711_154424.txt
TROUBLESHOOTING REPORT
============================================================
Generated: 2025-07-11 15:44:24
Directory: /home/jarvis/Documents/GitHub/polar-bear/modules/iteration8-pytorch-training

ISSUES (5):
  - PyTorch (torch) not installed - run: pip install torch
  - test_integration.py syntax error:   File "/home/jarvis/Documents/GitHub/polar-bear/modules/iteration8-pytorch-training/test_integration.py", line 108
    self.results.append(('Wrapper function', 'FAIL', result.get('error', 'Unknown error'))
                       ^
SyntaxError: '(' was never closed

  - script_interface import failed: No module named 'torch'
  - script_wrappers import failed: No module named 'torch'
  - Integration test failed: No module named 'torch'

WARNINGS (1):
  - preprocess.py execution warning: Traceback (most recent call last):
  File "/home/jarvis/Documents/GitHub/polar-bear/modules/iteration8-pytorch-training/preprocess.py", line 1, in <module>
    import torch
ModuleNotFoundError: No module named 'torch'


OK (32):
  - Python version: 3.12.3 ✓
  - NumPy (numpy) installed ✓
  - OpenCV (cv2) installed ✓
  - connector.py exists and readable ✓
  - hivemind_connector.py exists and readable ✓
  - preprocess.py exists and readable ✓
  - load.py exists and readable ✓
  - train.py exists and readable ✓
  - final.py exists and readable ✓
  - script_interface.py exists and readable ✓
  - script_wrappers.py exists and readable ✓
  - test_integration.py exists and readable ✓
  - troubleshoot_all.py exists and readable ✓
  - enhanced_integration.py syntax valid ✓
  - script_wrappers.py syntax valid ✓
  - test_full_integration.py syntax valid ✓
  - final.py syntax valid ✓
  - train.py syntax valid ✓
  - troubleshoot_all.py syntax valid ✓
  - hivemind_connector.py syntax valid ✓
  - script_interface.py syntax valid ✓
  - load.py syntax valid ✓
  - output.py syntax valid ✓
  - enhanced_train.py syntax valid ✓
  - integration_wrapper.py syntax valid ✓
  - connector.py syntax valid ✓
  - setup.py syntax valid ✓
  - preprocess.py syntax valid ✓
  - generator.py syntax valid ✓
  - Port 10050 (hivemind_connector) available ✓
  - Port 10051 (connector) available ✓
  - Directory writable ✓
